--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -11,23 +11,54 @@
 
     <TextView
         android:id="@+id/loggedMessage"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="You are logged in as"
+        android:text="Profile"
+        android:textAlignment="center"
         android:textColor="@color/black" />
 
     <TextView
         android:id="@+id/userPhoneNumber"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
         android:text="Phone Number"
-        android:textColor="#777777"
-        android:layout_marginTop="10dp"/>
+        android:textColor="#777777" />
 
-    <Button
-        android:id="@+id/logOutBtn"
-        android:layout_width="wrap_content"
+    <EditText
+        android:id="@+id/userName"
+        android:layout_width="162dp"
         android:layout_height="wrap_content"
-        android:text="LOGOUT"
-        android:layout_marginTop="20dp"/>
+        android:layout_marginTop="20dp"
+        android:background="#fff"
+        android:hint="Name"
+        android:inputType="text"
+        android:padding="10dp"
+        android:textAlignment="textStart"
+        android:textColor="@color/black"
+        android:textColorHint="#c5c5c5" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="30dp"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/saveBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="10dp"
+            android:text="SAVE" />
+
+        <Button
+            android:id="@+id/logOutBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="5dp"
+            android:layout_marginHorizontal="1dp"
+            android:text="LOGOUT" />
+    </LinearLayout>
 </LinearLayout>
