--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical"
     android:layout_gravity="center"
     android:background="#f7f7f7"
-    tools:context=".ProfileActivity">
+    tools:context=".Activities.ProfileActivity">
 
     <TextView
         android:id="@+id/loggedMessage"
